Fri Feb  6 07:52:57 2009  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (chfunc): type fixed.

Fri Feb  6 02:51:59 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_each_codepoint): update RDoc for
	  String#codepoints.  a patch from Radoslaw Bulat in
	  [ruby-core:21835]

Fri Feb  6 01:09:13 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* cont.c (cont_mark, cont_capture, cont_restore_1): use #else instead
	  of #elif.  a patch from NISHIMATSU Takeshi <t_nissie at yahoo.co.jp>
	  in [ruby-list:45856].

Thu Feb  5 20:28:27 2009  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h (rb_run_exec_options_err): renamed from
	  rb_run_exec_options.
	  (rb_exec_err): renamed from rb_exec.
	  (rb_fork_err): renamed from rb_fork.
	  (rb_spawn_err): renamed from rb_spawn.
	  (rb_run_exec_options): declared with 1.9.1 compatible signature.
	  (rb_exec): ditto.
	  (rb_fork): ditto.
	  (rb_spawn): ditto.

	* process.c (rb_run_exec_options_err): renamed from
	  rb_run_exec_options.
	  (rb_exec_err): renamed from rb_exec.
	  (rb_fork_err): renamed from rb_fork.
	  (rb_spawn_err): renamed from rb_spawn.
	  (rb_run_exec_options): defined.
	  (rb_exec): ditto.
	  (rb_fork): ditto.
	  (rb_spawn): ditto.

	* io.c: follow above change.

	* ext/pty/pty.c: follow above change.

	  [ruby-dev:37893]

Thu Feb  5 19:58:40 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket: AddrInfo is renamed to Addrinfo.  [ruby-dev:37876]

Thu Feb  5 16:18:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_SITE_LIB_PATH, RUBY_VENDOR_LIB_PATH): fix for
	  NetBSD.

Thu Feb  5 16:04:29 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.h): follow recent changes about paths.

Thu Feb  5 14:26:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (MAJOR, MINOR, TEENY): uses RUBY_VERSION_*.

	* mkconfig.rb (prefix): uses ruby_version in config.status.

Thu Feb  5 12:24:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
