@@ -1,3 +1,8 @@
+Fri Feb  6 12:03:47 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* ruby.c (process_options): -K and -E in shebang should be reflect to
+	  default_external. [ruby-dev:37920]
+
 Fri Feb  6 07:52:57 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pty/pty.c (chfunc): type fixed.
